[fixed] Icon italic style on IE9

--- a/less/icon.less
+++ b/less/icon.less
@@ -59,6 +59,8 @@
 
 [class*="@{ns}icon-"] {
   display: inline-block;
+  font-style: normal;
+
   &:before {
     .am-icon-font;
   }
